Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,71 +1,68 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID = 
+BOT_TOKEN = "5384534267:AAFCD8IrJGTIEtzpDoUUbMapertLGXfV6FI"
+GDRIVE_FOLDER_ID = "1IKeDiluowouhdFjtQE1ATTQgDiuKiFm3"
+OWNER_ID = 5543917190
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 20
-AUTO_DELETE_MESSAGE_DURATION = -1
-AUTO_DELETE_UPLOAD_MESSAGE_DURATION = -1  #minimum recommended 120
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+AUTO_DELETE_MESSAGE_DURATION = 120
+AUTO_DELETE_UPLOAD_MESSAGE_DURATION = 120  #minimum recommended 120
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = 18238683
+TELEGRAM_HASH = "1068ecf4ac70a8f6ac161b7512bbf128"
 
 # OPTIONAL CONFIG
-DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
-SUDO_USERS = ""
-IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
-STATUS_LIMIT = "" #recommended value 3
-STOP_DUPLICATE = ""
+DATABASE_URL = "postgresql://postgres:r6cbwllSbl2k9JiLu33V@containers-us-west-17.railway.app:7228/railway"
+AUTHORIZED_CHATS = "-1001635741120"
+SUDO_USERS = "5507620071"
+IGNORE_PENDING_REQUESTS = "True"
+USE_SERVICE_ACCOUNTS = "True"
+INDEX_URL = "https://winter.anuragcloud.workers.dev/0:/AnuragCloud"
+STATUS_LIMIT = "3" #recommended value 3
+STOP_DUPLICATE = "True"
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
 EXTENSION_FILTER = ""
-INCOMPLETE_TASK_NOTIFIER = ""
+INCOMPLETE_TASK_NOTIFIER = "True"
 
 #TURN ON/OFF FUCTIONS
-LEECH_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-MIRROR_ENABLED = ""             #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-WATCH_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-CLONE_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-ANILIST_ENABLED = ""            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-WAYBACK_ENABLED = ""            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-MEDIAINFO_ENABLED = ""          #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-SET_BOT_COMMANDS = "" 
+LEECH_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+MIRROR_ENABLED = "True"             #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+WATCH_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+CLONE_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+ANILIST_ENABLED = "True"            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+WAYBACK_ENABLED = "True"            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+MEDIAINFO_ENABLED = "True"          #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+SET_BOT_COMMANDS = "True" 
 
 # Update
 UPSTREAM_REPO = ""
 UPSTREAM_BRANCH = ""
 
 # Leech Mirror
-BOT_PM = ""
-LEECH_LOG = 
+BOT_PM = "True"
+LEECH_LOG = -1001787652537
 LOG_LEECH = ""
 LOG_CHANNEL_LOGGER = ""
 LOG_CHANNEL = "" #Optional
-LINK_LOGS = 
-MIRROR_LOGS = 
+LINK_LOGS = -1001641717224
+MIRROR_LOGS = -1001629095148
 TG_SPLIT_SIZE = ""
 AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
-CUSTOM_FILENAME = ""
+CUSTOM_FILENAME = "@MOVIES_ZILAA"
 TIMEZONE = "Asia/Kolkata"
 
 #Telegraph UI
-TITLE_NAME = ""
-AUTHOR_NAME = ""
-AUTHOR_URL = "" #@movies_zilaa
-GD_INFO = ""
+TITLE_NAME = "Torrent-To-Drives"
+AUTHOR_NAME = "Anurag-Maheshwari"
+AUTHOR_URL = "https://t.me/MOVIES_ZILAA" 
+GD_INFO = "Uploaded By Anurag Maheshwari"
 
 #Fsub
-FSUB = ""
-CHANNEL_USERNAME = ""
-FSUB_CHANNEL_ID = "" # Don't leave this empty or Remove it from your configs if you dont wanna use FSUB
+FSUB = "True"
+CHANNEL_USERNAME = "@MOVIES_ZILAA"
+FSUB_CHANNEL_ID = "-1001743903405" # Don't leave this empty or Remove it from your configs if you dont wanna use FSUB
 # qBittorrent
 BASE_URL_OF_BOT = ""
 SERVER_PORT = ""
@@ -79,30 +76,30 @@ RSS_CHAT_ID = ""
 USER_SESSION_STRING = ""     #Use it for 4GB leeching
 
 # Private Files
-ACCOUNTS_ZIP_URL = "" #recommended to use
-TOKEN_PICKLE_URL = "" #recommended to use
+ACCOUNTS_ZIP_URL = "https://drive.google.com/file/d/1J9UKrFApmLFZFugcGmt3x9is4SZIJ4sW/view?usp=sharing" #recommended to use
+TOKEN_PICKLE_URL = "https://drive.google.com/file/d/1iluDNHVfsHwnnpgQEnK_P3q3S4zIxuG2/view?usp=sharing" #recommended to use
 MULTI_SEARCH_URL = ""
 YT_COOKIES_URL = ""
 NETRC_URL = ""
 
 # Mega
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
+MEGA_API_KEY = "aUJDWaBI"
+MEGA_EMAIL_ID = "anuragmirror8769@gmail.com"
+MEGA_PASSWORD = "anuragmirror8769@gmail.com"
 
 # Shortener
-SHORTENER = ""
-SHORTENER_API = ""
+SHORTENER = "bitly.com"
+SHORTENER_API = "8df1df8c23f719e5cf97788cc2d40321ea30092b"
 
 # GDTOT COOKIE
-CRYPT = ""
+CRYPT = "c1ZRTVY3ai9WbjVwSE5sem9nYkFQT1dUNXZiSmRGL1ZYU3IvRzNrR3dCVT0%3D"
 
 # THEME
-EMOJI_THEME = ""      #Default is False
+EMOJI_THEME = "True"      #Default is False
 
 #APPDRIVE
-APPDRIVE_EMAIL = ""
-APPDRIVE_PASS = ""
+APPDRIVE_EMAIL = "anuragmirror8769@gmail.com"
+APPDRIVE_PASS = "anuragmirror8769@gmail.com"
 
 # Size Limits
 TORRENT_DIRECT_LIMIT = ""
@@ -113,8 +110,8 @@ STORAGE_THRESHOLD = ""
 LEECH_LIMIT = ""
 
 # Buttons
-VIEW_LINK = ""
-SOURCE_LINK = ""
+VIEW_LINK = "True"
+SOURCE_LINK = "True"
 BUTTON_FOUR_NAME = ""
 BUTTON_FOUR_URL = ""
 BUTTON_FIVE_NAME = ""
