--- a/config.env
+++ b/config.env
@@ -64,8 +64,8 @@ FSUB = "True"
 CHANNEL_USERNAME = "@MOVIES_ZILAA"
 FSUB_CHANNEL_ID = "-1001743903405" # Don't leave this empty or Remove it from your configs if you dont wanna use FSUB
 # qBittorrent
-BASE_URL_OF_BOT = ""
-SERVER_PORT = ""
+BASE_URL_OF_BOT = "https://firstcontainer-iuaxl.run-ap-south1.goorm.io"
+SERVER_PORT = "80"
 WEB_PINCODE = ""
 QB_SEED = ""
 
